# template_gen

./: .gitignore  CMakeLists.txt  LICENSE
src/: CMakeLists.txt  lib_gen.c  lib_gen.h  lib_multi_gen.c  lib_multi_gen.h  main.c
templates/: lib_multi_c.h  lib_multi_h.h
tests/: CMakeLists.txt  lib_gen_test.cpp  run_all_tests.cpp
